# observation-photo-manager

./: .eslintrc.json  README.md  package.json  tsconfig.json  vite.config.ts
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FileSelection.vue  FolderSelection.vue  GreetUser.vue  ImageCarousel.vue  ImageDisplay.vue  SaveFile.vue
src/interfaces/: photo.ts
