[package]
name = "observation-photo-manager"
version = "0.0.0"
description = "App for managing photos of observations"
authors = ["Emma Vriezen"]
edition = "2021"
repository = "https://github.com/EmmaVriezen/observation-photo-manager"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
